# lab04

./: CMakeLists.txt  hello_world.cpp
.github/workflows/: configuration.yml
formatter_ex_lib/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world
solver_application/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  equation
solver_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
